# CarbonSmartMeter

./: .gitignore  README.md  pyproject.toml
Carbon Smart Meter/: __init__.py
Carbon Smart Meter/docs/: GRID_SOURCES.md  Privacy Policy  TAMPER_PROOF_FLOW  Team  Terms_Conditions  Whitepaper_RoadMap
Carbon Smart Meter/docs/Circuit Diagram/: Scalability Note
Carbon Smart Meter/examples/solana_program/: Cargo.toml
Carbon Smart Meter/examples/solana_program/src/: lib.rs
Carbon Smart Meter/examples/solana_program/tests sol/: integration_test.rs
Carbon Smart Meter/examples1/: run_solana.py
src/: lib.rs
src/carbon_smart_meter/: __init__.py
src/carbon_smart_meter/blockchain/: solana.py
src/carbon_smart_meter/core/: mining.py  offset  offset.py  registration.py
src/carbon_smart_meter/core/blockchain/: adapter.py  solana.py
src/carbon_smart_meter/tests/: test_mining.py  test_offset.py  test_registration.py
src/carbon_smart_meter/tests/tests/: test_e2e.py  test_solana_submit.py
tests/: test_solana_submit.py
