[project]
name = "carbon-smart-meter"
version = "0.1.0"
description = "CORSIA-compliant DePIN solar mining network"
authors = [{ name = "Carbon Credits Marketplace", email = "team@ccmarketplace.io" }]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "nacl>=1.5",
    "boto3>=1.28",
    "azure-identity>=1.15",
    "azure-storage-blob>=12.19",
    "solana>=0.30",
    "borsh-construct>=0.1"
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"